upload all files

--- a/products/pretreatment/acidclean.html
+++ b/products/pretreatment/acidclean.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n-key="title">CLEANER No.105 — ยาล้างไขมันแบบกรด | Baume Chemical Blog</title>
+  <title data-i18n-key="title">CLEANER 105 — ยาล้างไขมัน 105 | Baume Chemical Blog</title>
 
   <!-- SEO base -->
-  <meta name="description" content="CLEANER No.105 ยาล้างไขมันแบบกรด: หลักการทำงาน การกำจัดคราบไขมัน/สนิมพร้อมกัน อัตราส่วนการใช้ ตารางส่วนผสม วิธีผสม 50 ลิตร การควบคุมบ่อ ค่า °Be, pH และคำเตือนความปลอดภัย">
+  <meta name="description" content="CLEANER 105 ยาล้างไขมัน 105: หลักการทำงาน การกำจัดคราบไขมัน/สนิมพร้อมกัน อัตราส่วนการใช้ ตารางส่วนผสม วิธีผสม 50 ลิตร การควบคุมบ่อ ค่า °Be, pH และคำเตือนความปลอดภัย">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/acidclean.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -19,7 +19,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="CLEANER No.105 — ยาล้างไขมันแบบกรด">
+  <meta property="og:title" content="CLEANER 105 — ยาล้างไขมัน 105">
   <meta property="og:description" content="ทำความสะอาดคราบไขมันและกัดสนิมในขั้นตอนเดียว ใช้ได้ที่อุณหภูมิห้อง กลิ่นน้อย พร้อมตารางอัตราส่วนใช้งานและวิธีผสม 50 ลิตร">
   <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/acidclean.html">
   <meta property="og:image" content="https://i.imgur.com/MLtal0F.jpeg">
@@ -29,7 +29,7 @@
 {
   "@context": "https://schema.org/",
   "@type": "Product",
-  "name": "CLEANER No.105 — ยาล้างไขมันแบบกรด",
+  "name": "CLEANER 105 — ยาล้างไขมัน 105",
   "description": "น้ำยาล้างคราบไขมันพร้อมกัดสนิม เหมาะกับงานจุ่มแช่ กลิ่นน้อย ใช้อุณหภูมิห้อง ปรับอัตราส่วนได้ตามความสกปรก มีวิธีผสม 50 ลิตรและแนวทางควบคุมบ่อ",
   "image": "https://i.imgur.com/MLtal0F.jpeg",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
@@ -208,8 +208,8 @@
   <header class="hero">
     <a class="back-chip" href="https://www.baumechemical.com/products/pretreatment/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
-      <h1 data-i18n-key="hero_title">CLEANER No.105 — ยาล้างไขมันแบบกรด</h1>
-      <p data-i18n-key="hero_tagline">ทำความสะอาดคราบไขมัน + กัดสนิมในขั้นตอนเดียว ใช้อุณหภูมิห้อง กลิ่นน้อย พร้อมวิธีผสมและควบคุมบ่อ</p>
+      <h1 data-i18n-key="hero_title">CLEANER 105 — ยาล้างไขมัน 105</h1>
+      <p data-i18n-key="hero_tagline">ออกแบบมาสำหรับงานจุ่มแช่โลหะทั่วไป ช่วยล้างคราบไขมันและกัดสนิมได้ในขั้นตอนเดียว ใช้ที่อุณหภูมิห้อง กลิ่นน้อย อ่อนโยนต่อผิวชิ้นงานเมื่อใช้งานตามอัตราส่วนที่แนะนำ และสามารถใช้ร่วมกับ กรดเกลือ (HCl) หรือ กรดกำมะถัน (H₂SO₄) เพื่อเพิ่มประสิทธิภาพเมื่อมีสนิมร่วมด้วย</p>
     </div>
   </header>
 
@@ -226,7 +226,7 @@
             น้ำยาชนิดกรดจึงเหมาะสมเพราะสามารถ <strong>ละลายสนิมและคราบแร่ธาตุ (Acid Etching)</strong> และ <strong>ทำลายโครงสร้างคราบ</strong> ได้พร้อมกัน
           </p>
           <p data-i18n-key="intro_p2">
-            CLEANER No.105 ออกแบบมาสำหรับงานจุ่มแช่โลหะทั่วไป ช่วยล้างคราบไขมันและกัดสนิมได้ในขั้นตอนเดียว
+            ยาล้างไขมัน 105 ออกแบบมาสำหรับงานจุ่มแช่โลหะทั่วไป ช่วยล้างคราบไขมันและกัดสนิมได้ในขั้นตอนเดียว
             ใช้ที่อุณหภูมิห้อง กลิ่นน้อย อ่อนโยนต่อผิวชิ้นงานเมื่อใช้งานตามอัตราส่วนที่แนะนำ และสามารถใช้ร่วมกับ
             กรดเกลือ (HCl) หรือ กรดกำมะถัน (H₂SO₄) เพื่อเพิ่มประสิทธิภาพเมื่อมีสนิมร่วมด้วย
           </p>
@@ -247,7 +247,7 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของ CLEANER No.105</h2>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของยาล้างไขมัน 105</h2>
         <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญที่ใช้จริงในสายการผลิต</p>
 
         <div class="features__grid">
@@ -294,8 +294,8 @@
         <h2 id="principles-h" class="section" data-i18n-key="principles_h">หลักการทำงาน</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="principle_1"><strong>การกำจัดคราบสนิมและคราบแร่ธาตุ (Acid Etching):</strong> กรดละลายสนิม/ตะกรันที่ยึดเกาะบนผิวโลหะได้ดี</li>
-            <li data-i18n-key="principle_2"><strong>ทำลายโครงสร้างคราบ:</strong> กรดบางชนิดทำให้โครงสร้างเคมีของคราบไขมันและสิ่งสกปรกแตกตัว หลุดออกได้ง่าย</li>
+            <li data-i18n-key="principle_1">การกำจัดคราบสนิมและคราบ เป็นกระบวนการที่ใช้สารละลายกรดเพื่อทำปฏิกิริยาทางเคมีกับพื้นผิวของโลหะ สารละลายกรดจะทำหน้าที่กัด หรือละลายชั้นของสารประกอบที่ไม่พึงประสงค์บนพื้นผิว เช่น สนิม (ออกไซด์ของเหล็ก) ตะกรัน (คราบแร่ธาตุ) หรือคราบสกปรกอื่น ๆ ที่ยึดเกาะแน่นอยู่ ทำให้พื้นผิวโลหะสะอาดขึ้น</li>
+            <li data-i18n-key="principle_2">กรดจะทำหน้าที่เข้าทำลายโครงสร้างเคมีของคราบ ทำให้โครงสร้างของคราบไขมันและสิ่งสกปรกแตกตัวและอ่อนแอลง นอกจากนี้ กรดยังช่วยลดแรงตึงผิวของน้ำ ทำให้สารละลายสามารถแทรกซึมเข้าถึงคราบที่เกาะติดแน่นอยู่บนผิวโลหะได้อย่างทั่วถึง ทำให้คราบต่าง ๆ สามารถหลุดออกจากพื้นผิวได้อย่างง่ายดายและมีประสิทธิภาพ</li>
           </ul>
         </div>
       </section>
@@ -305,7 +305,7 @@
         <h2 id="usage-h" class="section" data-i18n-key="usage_h">วิธีการใช้ & ตารางอัตราส่วน</h2>
         <p class="lead" data-i18n-key="usage_lead">เลือกอัตราส่วนตามสภาพชิ้นงาน</p>
 
-        <div class="table" role="region" aria-label="ตารางอัตราส่วนการใช้ CLEANER No.105" data-i18n-key="usage_table_aria">ตารางอัตราส่วนการใช้ CLEANER No.105</div>
+        <div class="table" role="region" aria-label="ตารางอัตราส่วนการใช้ยาล้างไขมัน 105" data-i18n-key="usage_table_aria">ตารางอัตราส่วนการใช้ยาล้างไขมัน 105</div>
         <div class="table">
           <table>
             <thead>
@@ -362,7 +362,7 @@
             <li data-i18n-key="mix_s2">เติมน้ำสะอาด <strong>20 ลิตร</strong></li>
             <li data-i18n-key="mix_s3">ตวงกรดเกลือ (HCl) <strong>10 ลิตร</strong> แล้วค่อย ๆ เทลงในน้ำพร้อมกวน</li>
             <li data-i18n-key="mix_s4">เติมน้ำสะอาดเพิ่ม <strong>10 ลิตร</strong></li>
-            <li data-i18n-key="mix_s5">ตวง <strong>CLEANER No.105</strong> <strong>10 ลิตร</strong> แล้วกวนให้เข้ากัน</li>
+            <li data-i18n-key="mix_s5">ตวง <strong>ยาล้างไขมัน 105</strong> <strong>10 ลิตร</strong> แล้วกวนให้เข้ากัน</li>
           </ol>
           <p data-i18n-key="mix_sum">สรุป: น้ำรวม 30 L + HCl 10 L + Cleaner 10 L = <strong>50 L</strong></p>
         </div>
@@ -466,7 +466,7 @@
   <script>
     const I18N = {
       th: {
-        title:"CLEANER No.105 — ยาล้างไขมันแบบกรด | Baume Chemical Blog",
+        title:"CLEANER 105 — ยาล้างไขมัน 105 | Baume Chemical Blog",
 
         /* Top nav / brand / lang */
         brand_name:"Baume Chemical",
@@ -475,8 +475,8 @@
 
         /* Hero & back */
         back_home:"← กลับเมนูหลัก",
-        hero_title:"CLEANER No.105 — ยาล้างไขมันแบบกรด",
-        hero_tagline:"ทำความสะอาดคราบไขมัน + กัดสนิมในขั้นตอนเดียว ใช้อุณหภูมิห้อง กลิ่นน้อย พร้อมวิธีผสมและควบคุมบ่อ",
+        hero_title:"CLEANER 105 — ยาล้างไขมัน 105",
+        hero_tagline:"ออกแบบมาสำหรับงานจุ่มแช่โลหะทั่วไป ช่วยล้างคราบไขมันและกัดสนิมได้ในขั้นตอนเดียว ใช้ที่อุณหภูมิห้อง กลิ่นน้อย อ่อนโยนต่อผิวชิ้นงานเมื่อใช้งานตามอัตราส่วนที่แนะนำ และสามารถใช้ร่วมกับ กรดเกลือ (HCl) หรือ กรดกำมะถัน (H₂SO₄) เพื่อเพิ่มประสิทธิภาพเมื่อมีสนิมร่วมด้วย",
 
         /* TOC */
         toc_title:"สารบัญ",
@@ -489,10 +489,10 @@
         /* Intro */
         intro_h:"ภาพรวมผลิตภัณฑ์",
         intro_p1:"น้ำยาเคมีสำหรับล้างคราบไขมันแบบกรดเป็นสารทำความสะอาดที่มีค่า pH ต่ำกว่า 7 ใช้กรดเป็นส่วนประกอบหลัก โดยทั่วไปงานล้างไขมันมักใช้ด่าง แต่เมื่อพบคราบฝังแน่นที่ประกอบด้วยทั้งคราบไขมันและคราบอนินทรีย์ (เช่น สนิม/ตะกรัน) น้ำยาชนิดกรดจึงเหมาะสมเพราะสามารถ ละลายสนิมและคราบแร่ธาตุ (Acid Etching) และ ทำลายโครงสร้างคราบ ได้พร้อมกัน",
-        intro_p2:"CLEANER No.105 ออกแบบมาสำหรับงานจุ่มแช่โลหะทั่วไป ช่วยล้างคราบไขมันและกัดสนิมได้ในขั้นตอนเดียว ใช้ที่อุณหภูมิห้อง กลิ่นน้อย อ่อนโยนต่อผิวชิ้นงานเมื่อใช้งานตามอัตราส่วนที่แนะนำ และสามารถใช้ร่วมกับ กรดเกลือ (HCl) หรือ กรดกำมะถัน (H₂SO₄) เพื่อเพิ่มประสิทธิภาพเมื่อมีสนิมร่วมด้วย",
+        intro_p2:"ยาล้างไขมัน 105 ออกแบบมาสำหรับงานจุ่มแช่โลหะทั่วไป ช่วยล้างคราบไขมันและกัดสนิมได้ในขั้นตอนเดียว ใช้ที่อุณหภูมิห้อง กลิ่นน้อย อ่อนโยนต่อผิวชิ้นงานเมื่อใช้งานตามอัตราส่วนที่แนะนำ และสามารถใช้ร่วมกับ กรดเกลือ (HCl) หรือ กรดกำมะถัน (H₂SO₄) เพื่อเพิ่มประสิทธิภาพเมื่อมีสนิมร่วมด้วย",
 
         /* Features (6 cards) */
-        features_h:"จุดเด่นของ CLEANER No.105",
+        features_h:"จุดเด่นของ CLEANER 105",
         features_lead:"สรุปคุณสมบัติสำคัญที่ใช้จริงในสายการผลิต",
         feat1_t:"ล้างไขมัน + กัดสนิมในขั้นตอนเดียว",
         feat1_d:"ลดจำนวนบ่อและเวลาทำงาน เหมาะกับงานคราบปนเปทั้งอินทรีย์และอนินทรีย์",
@@ -509,13 +509,13 @@
 
         /* Principles */
         principles_h:"หลักการทำงาน",
-        principle_1:"การกำจัดคราบสนิมและคราบแร่ธาตุ (Acid Etching): กรดละลายสนิม/ตะกรันที่ยึดเกาะบนผิวโลหะได้ดี",
-        principle_2:"ทำลายโครงสร้างคราบ: กรดบางชนิดทำให้โครงสร้างเคมีของคราบไขมันและสิ่งสกปรกแตกตัว หลุดออกได้ง่าย",
+        principle_1:"การกำจัดคราบสนิมและคราบ เป็นกระบวนการที่ใช้สารละลายกรดเพื่อทำปฏิกิริยาทางเคมีกับพื้นผิวของโลหะ สารละลายกรดจะทำหน้าที่กัด หรือละลายชั้นของสารประกอบที่ไม่พึงประสงค์บนพื้นผิว เช่น สนิม (ออกไซด์ของเหล็ก) ตะกรัน (คราบแร่ธาตุ) หรือคราบสกปรกอื่น ๆ ที่ยึดเกาะแน่นอยู่ ทำให้พื้นผิวโลหะสะอาดขึ้น",
+        principle_2:"กรดจะทำหน้าที่เข้าทำลายโครงสร้างเคมีของคราบ ทำให้โครงสร้างของคราบไขมันและสิ่งสกปรกแตกตัวและอ่อนแอลง นอกจากนี้ กรดยังช่วยลดแรงตึงผิวของน้ำ ทำให้สารละลายสามารถแทรกซึมเข้าถึงคราบที่เกาะติดแน่นอยู่บนผิวโลหะได้อย่างทั่วถึง ทำให้คราบต่าง ๆ สามารถหลุดออกจากพื้นผิวได้อย่างง่ายดายและมีประสิทธิภาพ",
 
         /* Usage & table */
         usage_h:"วิธีการใช้ & ตารางอัตราส่วน",
         usage_lead:"เลือกอัตราส่วนตามสภาพชิ้นงาน",
-        usage_table_aria:"ตารางอัตราส่วนการใช้ CLEANER No.105",
+        usage_table_aria:"ตารางอัตราส่วนการใช้ CLEANER 105",
         usage_th_condition:"สภาพชิ้นงาน",
         usage_th_cleaner:"ยาล้างไขมัน 105 (ซีซี/ลิตร)",
         usage_th_water:"น้ำสะอาด (ซีซี/ลิตร)",
@@ -538,7 +538,7 @@
         mix_s2:"เติมน้ำสะอาด 20 ลิตร",
         mix_s3:"ตวงกรดเกลือ (HCl) 10 ลิตร แล้วค่อย ๆ เทลงในน้ำพร้อมกวน",
         mix_s4:"เติมน้ำสะอาดเพิ่ม 10 ลิตร",
-        mix_s5:"ตวง CLEANER No.105 10 ลิตร แล้วกวนให้เข้ากัน",
+        mix_s5:"ตวง CLEANER 105 10 ลิตร แล้วกวนให้เข้ากัน",
         mix_sum:"สรุป: น้ำรวม 30 L + HCl 10 L + Cleaner 10 L = 50 L",
 
         /* Control & standards */
@@ -565,7 +565,7 @@
       },
 
       en: {
-        title:"CLEANER No.105 — Acid Degreaser | Baume Chemical Blog",
+        title:"CLEANER 105 — Acid Degreaser | Baume Chemical Blog",
 
         /* Top nav / brand / lang */
         brand_name:"Baume Chemical",
@@ -574,8 +574,8 @@
 
         /* Hero & back */
         back_home:"← Back to main",
-        hero_title:"CLEANER No.105 — Acid Degreaser",
-        hero_tagline:"Removes grease + rust in one step at room temperature with low odor, includes mixing & bath control tips.",
+        hero_title:"CLEANER 105 — Acid Degreaser",
+        hero_tagline:"formulated for immersion lines to degrease and derust in one step at room temperature with low odor. It is gentle on substrates at recommended ratios and can be paired with hydrochloric (HCl) or sulfuric acid (H₂SO₄) to boost derusting.",
 
         /* TOC */
         toc_title:"Contents",
@@ -588,10 +588,10 @@
         /* Intro */
         intro_h:"Product Overview",
         intro_p1:"An acid-based cleaner (pH < 7) designed to tackle both organic oils and inorganic soils like rust/scale. When deposits are stubborn and mixed, acids can dissolve mineral films (acid etching) while breaking down grease structures.",
-        intro_p2:"CLEANER No.105 is formulated for immersion lines to degrease and derust in one step at room temperature with low odor. It is gentle on substrates at recommended ratios and can be paired with hydrochloric (HCl) or sulfuric acid (H₂SO₄) to boost derusting.",
+        intro_p2:"CLEANER 105 is formulated for immersion lines to degrease and derust in one step at room temperature with low odor. It is gentle on substrates at recommended ratios and can be paired with hydrochloric (HCl) or sulfuric acid (H₂SO₄) to boost derusting.",
 
         /* Features */
-        features_h:"CLEANER No.105 Highlights",
+        features_h:"CLEANER 105 Highlights",
         features_lead:"Practical advantages for production lines",
         feat1_t:"Degrease + derust in one step",
         feat1_d:"Reduce tanks and cycle time; ideal for mixed organic/inorganic soils.",
@@ -608,13 +608,13 @@
 
         /* Principles */
         principles_h:"Principles of Action",
-        principle_1:"Rust/scale removal (acid etching): acids dissolve adhered oxides/mineral scale on metal.",
-        principle_2:"Soil structure breakdown: certain acids disrupt the chemistry of grease/contaminants for easy release.",
+        principle_1:"Rust and stain removal is a process that uses an acidic solution to chemically react with the metal's surface. The acid solution works by etching or dissolving unwanted layers of compounds that are tightly bonded to the surface, such as rust (iron oxide), scale (mineral deposits), or other contaminants, leaving the metal surface clean.",
+        principle_2:"Acids work by breaking down the chemical structure of stains, weakening and disintegrating the bonds of grease and dirt. Additionally, acids lower the surface tension of water, allowing the solution to thoroughly penetrate stubborn stains on metal surfaces, enabling them to be removed easily and effectively.",
 
         /* Usage & table */
         usage_h:"Usage & Ratios",
         usage_lead:"Choose ratios based on part condition",
-        usage_table_aria:"CLEANER No.105 usage ratios",
+        usage_table_aria:"CLEANER 105 usage ratios",
         usage_th_condition:"Part condition",
         usage_th_cleaner:"Cleaner 105 (cc/L)",
         usage_th_water:"Clean water (cc/L)",
@@ -637,7 +637,7 @@
         mix_s2:"Add 20 L clean water.",
         mix_s3:"Measure 10 L HCl and slowly add into water with stirring.",
         mix_s4:"Add another 10 L water.",
-        mix_s5:"Measure 10 L CLEANER No.105 and mix thoroughly.",
+        mix_s5:"Measure 10 L CLEANER 105 and mix thoroughly.",
         mix_sum:"Summary: 30 L water + 10 L HCl + 10 L Cleaner = 50 L.",
 
         /* Control & standards */
