--- a/products/pretreatment/soakclean.html
+++ b/products/pretreatment/soakclean.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n-key="title">SOAK CLEAN B1 — ยาต้มล้างไขมันแบบด่าง | Baume Chemical Blog</title>
+  <title data-i18n-key="title">SOAK CLEAN B1 — ยาต้มล้างไขมัน B1 | Baume Chemical Blog</title>
 
   <!-- SEO base -->
-  <meta name="description" content="SOAK CLEAN B1 ยาต้มล้างไขมันแบบด่าง (Alkaline Degreasing): หลักการ Saponification/Emulsification, การใช้งานแบบต้มแช่/กลิ้งขัดสะอาด, ช่วงอุณหภูมิ เวลา อัตราส่วน, วิธีวิเคราะห์และคำนวณ g/L">
+  <meta name="description" content="SOAK CLEAN B1 ยาต้มล้างไขมัน B1 (Alkaline Degreasing): หลักการ Saponification/Emulsification, การใช้งานแบบต้มแช่/กลิ้งขัดสะอาด, ช่วงอุณหภูมิ เวลา อัตราส่วน, วิธีวิเคราะห์และคำนวณ g/L">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/soakclean.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -19,7 +19,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="SOAK CLEAN B1 — ยาต้มล้างไขมันแบบด่าง">
+  <meta property="og:title" content="SOAK CLEAN B1 — ยาต้มล้างไขมัน B1">
   <meta property="og:description" content="ล้างคราบน้ำมันอย่างมีประสิทธิภาพด้วยกระบวนการด่างแบบต้มแช่/กลิ้งขัด เผยหลักการทำงาน อุณหภูมิ เวลา อัตราส่วน และวิธีวิเคราะห์บ่อ">
   <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/soakclean.html">
   <meta property="og:image" content="https://i.imgur.com/2hf2uIE.jpeg">
@@ -218,8 +218,8 @@
   <header class="hero">
     <a class="back-chip" href="https://www.baumechemical.com/products/pretreatment/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
-      <h1 data-i18n-key="hero_title">SOAK CLEAN B1 — ยาต้มล้างไขมันแบบด่าง</h1>
-      <p data-i18n-key="hero_tagline">Alkaline Degreasing: หลักการทำงาน (Saponification/Emulsification), วิธีใช้แบบต้มแช่/กลิ้งขัดสะอาด, อุณหภูมิ–เวลา–อัตราส่วน, วิธีวิเคราะห์บ่อ</p>
+      <h1 data-i18n-key="hero_title">SOAK CLEAN B1 — ยาต้มล้างไขมัน B1</h1>
+      <p data-i18n-key="hero_tagline">ยาต้มล้างไขมัน B1 ใช้ได้ทั้งแบบต้มแช่และกลิ้งขัดสะอาด กับเหล็กและโลหะไม่ใช่เหล็ก เช่น ทองเหลือง ทองแดง ขี้ตะกั่ว สแตนเลส ให้ผลทั้งล้างคราบน้ำมัน คราบสนิมแดง รอยสะเก็ด/ถลอก และในงานกลิ้งยังช่วยขัดผิวก่อนชุบได้ด้วย</p>
     </div>
   </header>
 
@@ -235,7 +235,7 @@
             เหมาะกับสายงานชุบและเคลือบผิว เนื่องจากทำให้ผิวสะอาดพร้อมสำหรับขั้นตอนถัดไป
           </p>
           <p data-i18n-key="intro_p2">
-            <strong>SOAK CLEAN B1</strong> ใช้ได้ทั้งแบบ <em>ต้มแช่</em> และ <em>กลิ้งขัดสะอาด (tumbling)</em> กับเหล็กและโลหะไม่ใช่เหล็ก (เช่น ทองเหลือง ทองแดง ขี้ตะกั่ว สแตนเลส)
+            <strong>ยาต้มล้างไขมัน B1</strong> ใช้ได้ทั้งแบบ <em>ต้มแช่</em> และ <em>กลิ้งขัดสะอาด (tumbling)</em> กับเหล็กและโลหะไม่ใช่เหล็ก (เช่น ทองเหลือง ทองแดง ขี้ตะกั่ว สแตนเลส)
             ให้ผลทั้งล้างคราบน้ำมัน คราบสนิมแดง รอยสะเก็ด/ถลอก และในงานกลิ้งยังช่วยขัดผิวก่อนชุบได้ด้วย
           </p>
         </div>
@@ -255,7 +255,7 @@
 
       <!-- Features (6 cards, 3x2) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของ SOAK CLEAN B1</h2>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของยาต้มล้างไขมัน B1</h2>
         <p class="lead" data-i18n-key="features_lead">เลือกใช้ได้ทั้งเหล็กและโลหะไม่ใช่เหล็ก ครอบคลุมงานต้มแช่และกลิ้ง</p>
 
         <div class="features__grid">
@@ -320,7 +320,7 @@
             <thead>
               <tr>
                 <th data-i18n-key="soak_th_metal">ชนิดโลหะ</th>
-                <th data-i18n-key="soak_th_dose">SOAK CLEAN B1 (กรัม/ลิตร)</th>
+                <th data-i18n-key="soak_th_dose">ยาต้มล้างไขมัน B1 (กรัม/ลิตร)</th>
                 <th data-i18n-key="soak_th_temp">อุณหภูมิ (°C)</th>
                 <th data-i18n-key="soak_th_time">เวลา (นาที)</th>
               </tr>
@@ -346,7 +346,7 @@
           <p data-i18n-key="soak_note" style="margin-top:8px"><em>หมายเหตุ:</em> เวลาในการต้มแช่ขึ้นอยู่กับระดับคราบและลักษณะงาน</p>
           <ul>
             <li data-i18n-key="soak_s1">เติมน้ำ ~2/3 ของถัง (อุ่นหรือต้มก็ได้)</li>
-            <li data-i18n-key="soak_s2">เติม SOAK CLEAN B1 ตามอัตราส่วน กวนให้เข้ากัน แล้วเติมน้ำให้ได้ระดับ</li>
+            <li data-i18n-key="soak_s2">เติมยาต้มล้างไขมัน B1 ตามอัตราส่วน กวนให้เข้ากัน แล้วเติมน้ำให้ได้ระดับ</li>
             <li data-i18n-key="soak_s3">จุ่มแช่ชิ้นงานตามเวลา/อุณหภูมิที่กำหนด</li>
           </ul>
         </div>
@@ -360,7 +360,7 @@
           <table>
             <thead>
               <tr>
-                <th data-i18n-key="tumble_th_dose">SOAK CLEAN B1</th>
+                <th data-i18n-key="tumble_th_dose">ยาต้มล้างไขมัน B1</th>
                 <th data-i18n-key="tumble_th_load">น้ำหนักงานต่อโม่</th>
                 <th data-i18n-key="tumble_th_time">เวลา (นาที)</th>
               </tr>
@@ -419,12 +419,12 @@
         <h2 id="ana-h" class="section" data-i18n-key="ana_h">การวิเคราะห์น้ำยา & การคำนวณความเข้มข้น</h2>
         <div class="content">
           <ol>
-            <li data-i18n-key="ana_s1">ปิเปตน้ำยา SOAK CLEAN B1 จำนวน <strong>10 ซีซี</strong> ลงในขวดชมพู่ 250 ซีซี</li>
+            <li data-i18n-key="ana_s1">ปิเปตน้ำยายาต้มล้างไขมัน B1 จำนวน <strong>10 ซีซี</strong> ลงในขวดชมพู่ 250 ซีซี</li>
             <li data-i18n-key="ana_s2">เติมน้ำกลั่น <strong>100 ซีซี</strong></li>
             <li data-i18n-key="ana_s3">หยด <em>Phenolphthalein Indicator</em> <strong>5 หยด</strong></li>
             <li data-i18n-key="ana_s4">ไทเทรตด้วย <strong>1.00 M HCl</strong> จนสีเปลี่ยนจากชมพูเป็นใส</li>
           </ol>
-          <p data-i18n-key="ana_calc"><strong>การคำนวณ:</strong> ปริมาณ 1.00 M HCl ที่ใช้ (mL) × <strong>7.24</strong> = <strong>g/L</strong> ของ SOAK CLEAN B1</p>
+          <p data-i18n-key="ana_calc"><strong>การคำนวณ:</strong> ปริมาณ 1.00 M HCl ที่ใช้ (mL) × <strong>7.24</strong> = <strong>g/L</strong> ของยาต้มล้างไขมัน B1</p>
         </div>
       </section>
 
@@ -484,7 +484,7 @@
   <script>
     const I18N = {
       th: {
-        title:"SOAK CLEAN B1 — ยาต้มล้างไขมันแบบด่าง | Baume Chemical Blog",
+        title:"SOAK CLEAN B1 — ยาต้มล้างไขมัน B1 | Baume Chemical Blog",
 
         /* Top nav / brand / lang */
         brand_name:"Baume Chemical",
@@ -493,8 +493,8 @@
 
         /* Hero & back */
         back_home:"← กลับเมนูหลัก",
-        hero_title:"SOAK CLEAN B1 — ยาต้มล้างไขมันแบบด่าง",
-        hero_tagline:"Alkaline Degreasing: หลักการทำงาน (Saponification/Emulsification), วิธีใช้แบบต้มแช่/กลิ้งขัดสะอาด, อุณหภูมิ–เวลา–อัตราส่วน, วิธีวิเคราะห์บ่อ",
+        hero_title:"SOAK CLEAN B1 — ยาต้มล้างไขมัน B1",
+        hero_tagline:"ยาต้มล้างไขมัน B1 ใช้ได้ทั้งแบบต้มแช่และกลิ้งขัดสะอาด กับเหล็กและโลหะไม่ใช่เหล็ก เช่น ทองเหลือง ทองแดง ขี้ตะกั่ว สแตนเลส ให้ผลทั้งล้างคราบน้ำมัน คราบสนิมแดง รอยสะเก็ด/ถลอก และในงานกลิ้งยังช่วยขัดผิวก่อนชุบได้ด้วย",
 
         /* TOC */
         toc_title:"สารบัญ",
@@ -509,10 +509,10 @@
         /* Intro */
         intro_h:"ภาพรวมกระบวนการต้มล้างไขมันแบบด่าง (Alkaline Degreasing)",
         intro_p1:"การล้างไขมันแบบด่างคือการใช้สารละลายที่มีค่า pH > 7 ร่วมกับความร้อนเพื่อกำจัดคราบไขมันหรือน้ำมันบนชิ้นงานโลหะอย่างมีประสิทธิภาพ เหมาะกับสายงานชุบและเคลือบผิว เนื่องจากทำให้ผิวสะอาดพร้อมสำหรับขั้นตอนถัดไป",
-        intro_p2:"SOAK CLEAN B1 ใช้ได้ทั้งแบบต้มแช่และกลิ้งขัดสะอาด (tumbling) กับเหล็กและโลหะไม่ใช่เหล็ก (เช่น ทองเหลือง ทองแดง ขี้ตะกั่ว สแตนเลส) ให้ผลทั้งล้างคราบน้ำมัน คราบสนิมแดง รอยสะเก็ด/ถลอก และในงานกลิ้งยังช่วยขัดผิวก่อนชุบได้ด้วย",
+        intro_p2:"ยาต้มล้างไขมัน B1 ใช้ได้ทั้งแบบต้มแช่และกลิ้งขัดสะอาด กับเหล็กและโลหะไม่ใช่เหล็ก (เช่น ทองเหลือง ทองแดง ขี้ตะกั่ว สแตนเลส) ให้ผลทั้งล้างคราบน้ำมัน คราบสนิมแดง รอยสะเก็ด/ถลอก และในงานกลิ้งยังช่วยขัดผิวก่อนชุบได้ด้วย",
 
         /* Features */
-        features_h:"จุดเด่นของ SOAK CLEAN B1",
+        features_h:"จุดเด่นของยาต้มล้างไขมัน B1",
         features_lead:"เลือกใช้ได้ทั้งเหล็กและโลหะไม่ใช่เหล็ก ครอบคลุมงานต้มแช่และกลิ้ง",
         feat1_t:"ล้างคราบหนักได้จริง",
         feat1_d:"กำจัดน้ำมัน/ไขมันหนาและคราบฝังแน่น เตรียมผิวก่อนชุบ/เคลือบ",
@@ -538,20 +538,20 @@
         soak_lead:"อัตราส่วน เวลา และอุณหภูมิที่แนะนำตามชนิดโลหะ",
         soak_table_aria:"ตารางอัตราส่วนแบบต้มแช่",
         soak_th_metal:"ชนิดโลหะ",
-        soak_th_dose:"SOAK CLEAN B1 (กรัม/ลิตร)",
+        soak_th_dose:"ยาต้มล้างไขมัน B1 (กรัม/ลิตร)",
         soak_th_temp:"อุณหภูมิ (°C)",
         soak_th_time:"เวลา (นาที)",
         soak_m1:"เหล็ก / สแตนเลส",
         soak_m2:"ทองเหลือง / ทองแดง / ขี้ตะกั่ว",
         soak_note:"หมายเหตุ: เวลาในการต้มแช่ขึ้นอยู่กับระดับคราบและลักษณะงาน",
         soak_s1:"เติมน้ำ ~2/3 ของถัง (อุ่นหรือต้มก็ได้)",
-        soak_s2:"เติม SOAK CLEAN B1 ตามอัตราส่วน กวนให้เข้ากัน แล้วเติมน้ำให้ได้ระดับ",
+        soak_s2:"เติมยาต้มล้างไขมัน B1 ตามอัตราส่วน กวนให้เข้ากัน แล้วเติมน้ำให้ได้ระดับ",
         soak_s3:"จุ่มแช่ชิ้นงานตามเวลา/อุณหภูมิที่กำหนด",
 
         /* Tumble */
         tumble_h:"การใช้งานแบบกลิ้งขัดสะอาด",
         tumble_table_aria:"อัตราส่วนแบบกลิ้งขัดสะอาด",
-        tumble_th_dose:"SOAK CLEAN B1",
+        tumble_th_dose:"ยาต้มล้างไขมัน B1",
         tumble_th_load:"น้ำหนักงานต่อโม่",
         tumble_th_time:"เวลา (นาที)",
         tumble_dose:"1–2 กก./โม่",
@@ -598,7 +598,7 @@
         /* Hero & back */
         back_home:"← Back to main",
         hero_title:"SOAK CLEAN B1 — Alkaline Degreasing",
-        hero_tagline:"Alkaline degreasing principles (Saponification/Emulsification), soak/tumbling methods, temperature–time–dosage, and bath analysis.",
+        hero_tagline:"SOAK CLEAN B1 can be used for both boiling/soaking and rolling/polishing applications. It effectively cleans iron and non-ferrous metals such as brass, copper, lead, and stainless steel. It works to remove oil stains, red rust, and scuff/abrasion marks. For rolling applications, it also helps to polish the surface before plating.",
 
         /* TOC */
         toc_title:"Contents",
