--- a/products/pretreatment/ultrasonic.html
+++ b/products/pretreatment/ultrasonic.html
@@ -216,10 +216,10 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/products/pretreatment/ultrasonic/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/pretreatment/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Cleaner 3388 — ผงล้างอัลตร้าโซนิค</h1>
-      <p data-i18n-key="hero_tagline">เสริมพลัง Cavitation ลดแรงตึงผิว ล้างคราบในซอกลึก ใช้ได้หลายโลหะ — 30–75 g/L, 50–85 °C, 2–5 นาที</p>
+      <p data-i18n-key="hero_tagline">สามารถใช้ได้ดีกับระบบล้างอุลตร้าโซนิค มีคุณสมบัติในการล้างพวกสิ่งสกปรก คราบเหนียวออกได้ดี ใช้กับงานล้างโลหะ สแตนเลส,เหล็ก,อลูมิเนียม,ซิ้งค์ฉีด,งานกัลวาไนซ์,ทองแดง,ทองเหลือง,แมกนีเซียม และโลหะอื่น ๆ</p>
     </div>
   </header>
 
@@ -261,8 +261,8 @@
         <div class="features__grid">
           <article class="features__item">
             <div class="features__icon" data-img="true">🌀</div>
-            <h3 class="features__title" data-i18n-key="feat1_t">เสริมพลัง Cavitation</h3>
-            <p class="features__desc" data-i18n-key="feat1_d">ลดแรงตึงผิว ช่วยให้ฟองจิ๋วเกิด/ยุบมีประสิทธิภาพ ดึงคราบออกจากผิว</p>
+            <h3 class="features__title" data-i18n-key="feat1_t">เกิดและยุบตัวของฟองอากาศ</h3>
+            <p class="features__desc" data-i18n-key="feat1_d">แรงอัดและแรงกระแทกจากการยุบตัวของฟองเหล่านี้ช่วยขจัดสิ่งสกปรกออกจากพื้นผิววัสดุได้อย่างมีประสิทธิภาพ</p>
           </article>
 
           <article class="features__item">
@@ -274,7 +274,7 @@
           <article class="features__item">
             <div class="features__icon" data-img="true">🔄</div>
             <h3 class="features__title" data-i18n-key="feat3_t">รองรับหลายโลหะ</h3>
-            <p class="features__desc" data-i18n-key="feat3_d">สแตนเลส เหล็ก Al Zn ชิ้นงานกัลวาไนซ์ Cu/Br และ Mg</p>
+            <p class="features__desc" data-i18n-key="feat3_d">สแตนเลส เหล็ก อลูมิเนียม ซิงค์ งานกัลวาไนซ์ ทองแดง ทองเหลือง และแมกนีเซียม</p>
           </article>
 
           <article class="features__item">
@@ -428,7 +428,7 @@
         /* Hero & back */
         back_home:"← กลับเมนูหลัก",
         hero_title:"Cleaner 3388 — ผงล้างอัลตร้าโซนิค",
-        hero_tagline:"เสริมพลัง Cavitation ลดแรงตึงผิว ล้างคราบในซอกลึก ใช้ได้หลายโลหะ — 30–75 g/L, 50–85 °C, 2–5 นาที",
+        hero_tagline:"สามารถใช้ได้ดีกับระบบล้างอุลตร้าโซนิค มีคุณสมบัติในการล้างพวกสิ่งสกปรก คราบเหนียวออกได้ดี ใช้กับงานล้างโลหะ สแตนเลส,เหล็ก,อลูมิเนียม,ซิ้งค์ฉีด,งานกัลวาไนซ์,ทองแดง,ทองเหลือง,แมกนีเซียม และโลหะอื่น ๆ",
 
         /* TOC */
         toc_title:"สารบัญ",
@@ -446,12 +446,12 @@
         /* Features */
         features_h:"จุดเด่นของ Cleaner 3388",
         features_lead:"ออกแบบเพื่อระบบอัลตร้าโซนิคโดยเฉพาะ—ทำความสะอาดลึก รวดเร็ว และควบคุมบ่อง่าย",
-        feat1_t:"เสริมพลัง Cavitation",
-        feat1_d:"ลดแรงตึงผิว ช่วยให้ฟองจิ๋วเกิด/ยุบมีประสิทธิภาพ ดึงคราบออกจากผิว",
+        feat1_t:"เกิดและยุบตัวของฟองอากาศ",
+        feat1_d:"แรงอัดและแรงกระแทกจากการยุบตัวของฟองเหล่านี้ช่วยขจัดสิ่งสกปรกออกจากพื้นผิววัสดุได้อย่างมีประสิทธิภาพ",
         feat2_t:"เข้าถึงซอก/รูเล็ก",
         feat2_d:"ทำความสะอาดบริเวณที่เข้าถึงยาก เช่น ร่องเกลียว ช่องแคบ และรูทะลุ",
         feat3_t:"รองรับหลายโลหะ",
-        feat3_d:"สแตนเลส เหล็ก Al Zn กัลวาไนซ์ Cu/Br และ Mg",
+        feat3_d:"สแตนเลส เหล็ก อลูมิเนียม ซิงค์ งานกัลวาไนซ์ ทองแดง ทองเหลือง และแมกนีเซียม",
         feat4_t:"ทำงานที่ 50–85 °C",
         feat4_d:"อุณหภูมิสูงขึ้นช่วยเร่งการล้างและสั้นรอบเวลา",
         feat5_t:"รอบล้างรวดเร็ว",
@@ -509,7 +509,7 @@
         /* Hero & back */
         back_home:"← Back to main",
         hero_title:"Cleaner 3388 — Ultrasonic Cleaning Powder",
-        hero_tagline:"Boost cavitation, lower surface tension, clean deep crevices—30–75 g/L, 50–85 °C, 2–5 min",
+        hero_tagline:"Highly effective with ultrasonic cleaning systems, this solution is excellent at removing dirt and stubborn, sticky residue. It's designed for cleaning a variety of metals, including stainless steel, iron, aluminum, die-cast zinc, galvanized steel, copper, brass, magnesium, and more.",
 
         /* TOC */
         toc_title:"Contents",
@@ -527,12 +527,12 @@
         /* Features */
         features_h:"Cleaner 3388 Highlights",
         features_lead:"Purpose-built for ultrasonic systems—deep cleaning, fast cycles, easy bath control",
-        feat1_t:"Cavitation booster",
-        feat1_d:"Lowers surface tension to promote efficient bubble formation and collapse.",
+        feat1_t:"The rapid creation and collapse of millions of air bubbles.",
+        feat1_d:"The compression and impact from the collapse of these bubbles effectively remove dirt from the surface of materials.",
         feat2_t:"Reaches tight features",
         feat2_d:"Cleans threads, narrow channels, and through-holes effectively.",
         feat3_t:"Multi-metal compatible",
-        feat3_d:"Stainless, steel, Al, Zn, galvanized parts, Cu/Br, and Mg.",
+        feat3_d:"stainless, steel, aluminum, zinc, galvanized parts, copper, brass, and magnesium",
         feat4_t:"Operates at 50–85 °C",
         feat4_d:"Higher temperatures can shorten cleaning cycles.",
         feat5_t:"Fast cycle times",
