upload all files

--- a/products/pretreatment/soakclean.html
+++ b/products/pretreatment/soakclean.html
@@ -303,8 +303,8 @@
         <h2 id="principles-h" class="section" data-i18n-key="principles_h">หลักการทำงาน</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="principle_sap"><strong>Saponification:</strong> ด่างทำปฏิกิริยากับไขมันจากสัตว์/พืชให้กลายเป็นสบู่ ละลายน้ำและหลุดออกได้ง่าย</li>
-            <li data-i18n-key="principle_emul"><strong>Emulsification:</strong> สารลดแรงตึงผิวช่วยแตกตัวน้ำมันปิโตรเลียมให้เป็นอิมัลชัน แขวนลอยแล้วล้างออกง่าย</li>
+            <li data-i18n-key="principle_sap">กระบวนการ Saponification คือการที่ด่างทำปฏิกิริยาทางเคมีกับไขมันจากพืชหรือสัตว์เพื่อเปลี่ยนให้กลายเป็นสบู่ สบู่ที่เกิดขึ้นนี้จะทำหน้าที่เป็นสารลดแรงตึงผิวและห่อหุ้มโมเลกุลไขมันไว้ภายในกลุ่มก้อนไมเซลล์ ทำให้คราบไขมันที่ปกติไม่ละลายน้ำสามารถแขวนลอยและถูกชะล้างออกไปได้ง่าย ทำให้การกำจัดคราบไขมันเป็นไปอย่างมีประสิทธิภาพโดยไม่ต้องออกแรงขัดมาก</li>
+            <li data-i18n-key="principle_emul">กระบวนการ Emulsification หรือ การทำอิมัลชัน คือกระบวนการที่สารลดแรงตึงผิว เข้าไปทำหน้าที่เป็นตัวกลางเพื่อทำให้ของเหลวสองชนิดที่ไม่เข้ากัน (เช่น น้ำกับน้ำมัน) สามารถผสมรวมกันได้เป็นเนื้อเดียวกันชั่วคราว สารลดแรงตึงผิวจะช่วยสลายโมเลกุลน้ำมันปิโตรเลียมให้แตกออกเป็นหยดเล็กๆ และห่อหุ้มไว้ภายในโมเลกุลของตัวเอง ทำให้คราบน้ำมันสามารถแขวนลอยอยู่ในน้ำและถูกชะล้างออกไปได้อย่างง่ายดายและมีประสิทธิภาพ</li>
           </ul>
         </div>
       </section>
@@ -530,8 +530,8 @@
 
         /* Principles */
         principles_h:"หลักการทำงาน",
-        principle_sap:"Saponification: ด่างทำปฏิกิริยากับไขมันจากสัตว์/พืชให้กลายเป็นสบู่ ละลายน้ำและหลุดออกได้ง่าย",
-        principle_emul:"Emulsification: สารลดแรงตึงผิวช่วยแตกตัวน้ำมันปิโตรเลียมให้เป็นอิมัลชัน แขวนลอยแล้วล้างออกง่าย",
+        principle_sap:"กระบวนการ Saponification คือการที่ด่างทำปฏิกิริยาทางเคมีกับไขมันจากพืชหรือสัตว์เพื่อเปลี่ยนให้กลายเป็นสบู่ สบู่ที่เกิดขึ้นนี้จะทำหน้าที่เป็นสารลดแรงตึงผิวและห่อหุ้มโมเลกุลไขมันไว้ภายในกลุ่มก้อนไมเซลล์ ทำให้คราบไขมันที่ปกติไม่ละลายน้ำสามารถแขวนลอยและถูกชะล้างออกไปได้ง่าย ทำให้การกำจัดคราบไขมันเป็นไปอย่างมีประสิทธิภาพโดยไม่ต้องออกแรงขัดมาก",
+        principle_emul:"กระบวนการ Emulsification หรือ การทำอิมัลชัน คือกระบวนการที่สารลดแรงตึงผิว เข้าไปทำหน้าที่เป็นตัวกลางเพื่อทำให้ของเหลวสองชนิดที่ไม่เข้ากัน (เช่น น้ำกับน้ำมัน) สามารถผสมรวมกันได้เป็นเนื้อเดียวกันชั่วคราว สารลดแรงตึงผิวจะช่วยสลายโมเลกุลน้ำมันปิโตรเลียมให้แตกออกเป็นหยดเล็กๆ และห่อหุ้มไว้ภายในโมเลกุลของตัวเอง ทำให้คราบน้ำมันสามารถแขวนลอยอยู่ในน้ำและถูกชะล้างออกไปได้อย่างง่ายดายและมีประสิทธิภาพ",
 
         /* Soak */
         soak_h:"การใช้งานแบบต้มแช่",
@@ -634,8 +634,8 @@
 
         /* Principles */
         principles_h:"Principles of Action",
-        principle_sap:"Saponification: Alkali reacts with animal/vegetable fats to form water-soluble soaps.",
-        principle_emul:"Emulsification: Surfactants disperse petroleum oils into stable emulsions for rinsing.",
+        principle_sap:"The saponification process is when an alkali chemically reacts with animal or plant fats to convert them into soap. The resulting soap acts as a surfactant, enveloping the fat molecules within a micelle cluster. This allows the normally insoluble grease stains to be suspended and easily washed away, making for an efficient removal of grease without the need for excessive scrubbing.",
+        principle_emul:"The process of emulsification is when a surfactant acts as a medium to temporarily combine two immiscible liquids (like oil and water) into a single, uniform mixture. The surfactant breaks down petroleum oil molecules into tiny droplets and encapsulates them. This allows the oil stains to be suspended in water and easily and effectively washed away.",
 
         /* Soak */
         soak_h:"Soak (immersion) application",
