--- a/products/pretreatment/ultrasonic.html
+++ b/products/pretreatment/ultrasonic.html
@@ -302,8 +302,8 @@
         <h2 id="principles-h" class="section" data-i18n-key="principles_h">หลักการทำงาน</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="princ_cav">Cavitation: ฟองจิ๋วขยาย/ยุบตัวอย่างรวดเร็ว สร้างไมโครเจ็ตและแรงเฉือน กวาดคราบออกจากผิว</li>
-            <li data-i18n-key="princ_surf">Surfactants: ลดแรงตึงผิว สร้างอิมัลชันของน้ำมัน/ไขมัน ทำให้คราบแขวนลอยและล้างออกง่าย</li>
+            <li data-i18n-key="princ_cav">หลักการทำงานของ Cavitation ในการทำความสะอาดคือการใช้คลื่นเสียงความถี่สูง (ultrasonic waves) เพื่อสร้างและยุบตัวของฟองอากาศขนาดจิ๋วนับล้านฟองอย่างรวดเร็วและรุนแรง การยุบตัวของฟองเหล่านี้จะทำให้เกิดแรงปะทะนี้มีกำลังมหาศาลพอที่จะกวาดและทำลายคราบสกปรกที่เกาะแน่นอยู่บนผิวโลหะให้หลุดออกไปได้อย่างมีประสิทธิภาพ</li>
+            <li data-i18n-key="princ_surf">หลักการทำงานของ Surfactants สารลดแรงตึงผิว คือสารประกอบที่ทำหน้าที่ลดแรงตึงผิวระหว่างของเหลวสองชนิดที่ไม่เข้ากัน เช่น น้ำกับน้ำมัน โดยโมเลกุลของสารนี้จะมีทั้งส่วนที่ชอบน้ำและส่วนที่ชอบน้ำมัน เมื่อสารลดแรงตึงผิวถูกเติมลงไปในน้ำที่มีคราบน้ำมันหรือไขมัน มันจะเข้าล้อมรอบโมเลกุลไขมันเพื่อสร้างอิมัลชัน ทำให้คราบสามารถแขวนลอยอยู่ในน้ำและถูกชะล้างออกไปได้อย่างง่ายดาย</li>
           </ul>
         </div>
       </section>
@@ -461,8 +461,8 @@
 
         /* Principles */
         principles_h:"หลักการทำงาน",
-        princ_cav:"Cavitation: ฟองจิ๋วขยาย/ยุบตัวอย่างรวดเร็ว สร้างไมโครเจ็ตและแรงเฉือน กวาดคราบออกจากผิว",
-        princ_surf:"Surfactants: ลดแรงตึงผิว สร้างอิมัลชันของน้ำมัน/ไขมัน ทำให้คราบแขวนลอยและล้างออกง่าย",
+        princ_cav:"หลักการทำงานของ Cavitation ในการทำความสะอาดคือการใช้คลื่นเสียงความถี่สูง (ultrasonic waves) เพื่อสร้างและยุบตัวของฟองอากาศขนาดจิ๋วนับล้านฟองอย่างรวดเร็วและรุนแรง การยุบตัวของฟองเหล่านี้จะทำให้เกิดแรงปะทะนี้มีกำลังมหาศาลพอที่จะกวาดและทำลายคราบสกปรกที่เกาะแน่นอยู่บนผิวโลหะให้หลุดออกไปได้อย่างมีประสิทธิภาพ",
+        princ_surf:"หลักการทำงานของ Surfactants สารลดแรงตึงผิว คือสารประกอบที่ทำหน้าที่ลดแรงตึงผิวระหว่างของเหลวสองชนิดที่ไม่เข้ากัน เช่น น้ำกับน้ำมัน โดยโมเลกุลของสารนี้จะมีทั้งส่วนที่ชอบน้ำและส่วนที่ชอบน้ำมัน เมื่อสารลดแรงตึงผิวถูกเติมลงไปในน้ำที่มีคราบน้ำมันหรือไขมัน มันจะเข้าล้อมรอบโมเลกุลไขมันเพื่อสร้างอิมัลชัน ทำให้คราบสามารถแขวนลอยอยู่ในน้ำและถูกชะล้างออกไปได้อย่างง่ายดาย",
 
         /* Dosage */
         dose_h:"อัตราการใช้ (ทั่วไป)",
@@ -542,8 +542,8 @@
 
         /* Principles */
         principles_h:"Principles of Action",
-        princ_cav:"Cavitation: Rapid bubble growth/collapse creates microjets and shear to strip soils.",
-        princ_surf:"Surfactants: Reduce surface tension and emulsify oils/grease for easy rinsing.",
+        princ_cav:"The working principle of cavitation in cleaning uses high-frequency sound waves to create and violently collapse millions of tiny bubbles. This collapse generates powerful microjets and shear forces that collide with the object's surface. This immense force is strong enough to dislodge and remove stubborn dirt and stains clinging to the metal surface effectively.",
+        princ_surf:"Surfactants, or surface-active agents, are compounds that lower the surface tension between two immiscible liquids (like water and oil). A surfactant molecule has both a water-loving (hydrophilic) and an oil-loving (hydrophobic) part. When added to water with oil or grease, the surfactant molecules surround the oil to create an emulsion, allowing the stains to be suspended in the water and easily washed away.",
 
         /* Dosage */
         dose_h:"Dosage (typical)",
